<resources>
    <string name="app_name">Mirelex</string>
    <string name="Login">Log In</string>
    <string name="forgotYourPassword">Forgot your password?</string>
    <string name="logInWithFacebook">Log In with Facebook</string>
    <string name="createAnAccount">Create an account</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="customer">Ambassador</string>
    <string name="store">Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstNameField">First Name</string>
    <string name="paternalLastnameField">Paternal Lastname</string>
    <string name="genderFIeld">Gender</string>
    <string name="companyNameField">Company Name</string>
    <string name="checkboxTermsField"><u>I Agree with the Terms and Conditions</u></string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="storeTabProducts">Products</string>
    <string name="storeTabOrders">Orders</string>
    <string name="storeTabNotifications">Notifications</string>
    <string name="storeTabProfile">Profile</string>
    <string name="forgotYourPasswordDescription">We will send you an email in which you can reset your password</string>
    <string name="personalPhone">Cell Phone</string>
    <string name="continueProcess">Continue</string>
    <string name="maternalLastName">Maternal Lastname</string>
    <string name="information">Information</string>
    <string name="address">Address</string>
    <string name="street">Street</string>
    <string name="number">Number</string>
    <string name="internalNumber">Interior Number</string>
    <string name="postalCode">Postal Code</string>
    <string name="end">Submit</string>
    <string name="caracteristics">Characteristics</string>
    <string name="heightInCms">Height</string>
    <string name="fillRequiredFields">Please fill in all required fields</string>
    <string name="bust">Bust</string>
    <string name="waist">Waist</string>
    <string name="hip">Hip</string>
    <string name="size">Size</string>
    <string name="skinColor">Skin Color</string>
    <string name="bodyType">Body Type</string>
    <string name="hairColor">Hair Color</string>
    <string name="neighborhood">Neighborhood</string>
    <string name="category">Category</string>
    <string name="style">Style</string>
    <string name="styleClient">Outfit</string>
    <string name="styleStore">Style</string>
    <string name="material">Material</string>
    <string name="decoration">Decoration</string>
    <string name="length">Length</string>
    <string name="sleeveStyle">Sleeve Style</string>
    <string name="leaseable">Lease</string>
    <string name="sellable">Sellable</string>
    <string name="fitting">Fitting</string>
    <string name="sell">Sell</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wantToTestItBefore">Do you want to try it before?</string>
    <string name="alert">Alert</string>
    <string name="orderDetails">Order Detail</string>
    <string name="orderProduct">Order Product</string>
    <string name="confirm">Confirm</string>
    <string name="doFittingOrder">The Product is available for Fitting</string>
    <string name="type">Type</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="total">Total</string>
    <string name="folio">Folio</string>
    <string name="services">Services</string>
    <string name="orderService">Order Service</string>
    <string name="askService">Request service</string>
    <string name="cleanning">Dry Cleaning</string>
    <string name="sewing">Sewing</string>
    <string name="stores">Stores</string>
    <string name="sendMessage">Send Message</string>
    <string name="messages">Messages</string>
    <string name="contact">Contact</string>
    <string name="termsAndConditions">Terms and Conditions</string>
    <string name="closeSession">Sign off</string>
    <string name="sendUsYourComments">Send us your comments, questions or suggestions.</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="homePhone">Phone</string>
    <string name="updateInformation">Update Information</string>
    <string name="facebokkProfile">Facebook Profile URL</string>
    <string name="instagramProfile">Instagram Profile URL</string>
    <string name="products">Products</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="condition">Condition</string>
    <string name="colors">Colors</string>
    <string name="dressSilhouette">Silouetthe</string>
    <string name="ocation">Occassion</string>
    <string name="description">Description</string>
    <string name="type_to_search">Search</string>
    <string name="sellPrice">Sell Price</string>
    <string name="leasablePrice">Lease Price</string>
    <string name="isStretch">Is Stretch?</string>
    <string name="featuredImage">Main Photo</string>
    <string name="addProduct">Create Product</string>
    <string name="newProduct">New Product</string>
    <string name="usedTimes">Times Used</string>
    <string name="invalid_date">Invalid date</string>
    <string name="send">Send</string>
    <string name="conversations">Conversations</string>
    <string name="selectDate">Please choose the date </string>
    <string name="denied">Reject</string>
    <string name="delivery">Delivery</string>
    <string name="paymentMethods">Payment Method</string>
    <string name="principal">Principal</string>
    <string name="deletePaymentCard">Delete Payment Cards</string>
    <string name="cardNumber">Card Number</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="noDataAvailable">No data available</string>
    <string name="defaultPaymentCard">Default</string>
    <string name="addPaymentCard">Add Payment Card</string>
    <string name="enterClientMesaurements">Measuments adjustment</string>
    <string name="adjustedMesaurements">Measuments adjustment</string>
    <string name="lease">Lease</string>
    <string name="purchase">Purchase</string>
    <string name="toBuy">Purchase</string>
    <string name="all">All</string>
    <string name="availableUpdate">Update available</string>
    <string name="availableUpdateDescription">There is a new version available.</string>
    <string name="facebookError">Sorry, there was a problem with Facebook</string>
    <string name="selectImage">Select a photo of your product"</string>
    <string name="delete">Delete</string>
    <string name="complementaryPhotos">Conplementary Photos</string>
    <string name="confirmPhone">Verify your phone number</string>
    <string name="code">Code</string>
    <string name="confirmPhoneText">An SMS with a new code has been sent to your phone</string>
    <string name="resendCode">Resend Code</string>
    <string name="verifyCodeProcessing">An SMS was sent to your phone with a code type in the code</string>
    <string name="searchProductActionBarTitle">Search</string>
    <string name="searchByBrand">Search...</string>
    <string name="systemError">Error</string>
    <string name="systemErrorDescription">Sorry, by the moment we are working on it</string>
    <string name="termsAlert">Terms and Conditions</string>
    <string name="termsAlertDescription">Read and Accept our Terms of Service</string>
    <string name="accessDenied">Access denied</string>
    <string name="accessDeniedDescription">Invalid user type</string>
    <string name="whatAreYouInterestedOf">What are you looking for?</string>
    <string name="callus">Call us</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="followUs">Follow Us!</string>
    <string name="myProducts">My products</string>
    <string name="myOrders">My orders</string>
    <string name="selectStore">Select a Store to pickup your order</string>
    <string name="statusHistory">See status history</string>
    <string name="pendingApprovalAlertTitle">Pending Approval</string>
    <string name="pendingApprovalAlertDesc">Your profile is under review, to upload products you need to be approved.</string>
    <string name="completeYourProfile">To bring you a better experience, let\'s finish your profile!</string>
    <string name="mirlexRecommendations">Mirelex recommendations</string>
    <string name="selectOptionDropdown">--Select--</string>
    <string name="verifyPhoneUpdateProfile">Update profile</string>
    <string name="birthDate">Birth date</string>
    <string name="storeAndDesign">Store and designer</string>
    <string name="areYouADesigner">I am a designer</string>
    <string name="isRequired">is required</string>
    <string name="wishlist">Favorites</string>
    <string name="myRequest">My orders</string>
    <string name="myBusiness">My business</string>
    <string name="storeWithPoints">Store:</string>
    <string name="selectedStore">Selected store:</string>
    <string name="pleaseSelectStore">Please select an store</string>
    <string name="transactions">Transactions</string>
    <string name="selectedStoreNoPoints">Selected store</string>
    orderService
</resources>
