<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:title="@string/products" android:icon="@drawable/products_tab"
            android:id="@+id/storeNavigationProducts"/>

    <item
            android:id="@+id/storeNavigationServices"
            android:title="@string/services" android:icon="@drawable/services_tab"/>

    <item
            android:id="@+id/storeNavigationOrders"
            android:icon="@drawable/orders_tab"
            android:title="@string/storeTabOrders"/>
    <item android:title="@string/storeTabNotifications" android:icon="@drawable/notifications_tab"
          android:id="@+id/storeNavigationNotifications"/>
    <item android:title="@string/storeTabProfile" android:icon="@drawable/profile_tab"
          android:id="@+id/storeNavigationProfile"/>

</menu>
