<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/customerNavigationProducts"
            android:icon="@drawable/home_tab"
            android:title="@string/storeTabProducts"/>

    <item android:title="Servicios" android:id="@+id/customerNavigationServices" android:icon="@drawable/services_tab"/>
    <item
            android:id="@+id/customerNavigationOrders"
            android:title="@string/storeTabOrders" android:icon="@drawable/orders_tab"/>

    <item
            android:id="@+id/customerNavigationNotifications"
            android:title="@string/storeTabNotifications" android:icon="@drawable/notifications_tab"/>
    <item android:title="@string/storeTabProfile" android:id="@+id/customerNavigationProfile"
          android:icon="@drawable/profile_tab"/>

</menu>
