<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical" android:padding="10dp">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal">

        <Button
                android:id="@+id/verifyPhoneLogout"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="left"
                android:text="@string/closeSession"
                android:textAllCaps="false"
                android:textColor="@color/colorLightRed"
                android:textSize="11sp" />

        <Button
                android:id="@+id/verifyPhoneUpdateProfile"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:gravity="right"
                android:text="@string/verifyPhoneUpdateProfile"
                android:textAllCaps="false"
                android:textSize="11sp" />
    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="100dp" app:srcCompat="@drawable/mirelex_logo_cian"
            android:id="@+id/imageView18" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/confirmPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView27" android:textAlignment="center"
            android:textColor="@color/black" android:textSize="18sp" android:layout_marginBottom="8dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/verifyPhoneInput" android:hint="@string/code" android:layout_marginBottom="8dp"/>
    <TextView
            android:text="@string/confirmPhoneText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/verifyPhoneText" android:layout_marginBottom="8dp"
            android:textAlignment="center"/>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:text="@string/resendCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/verifyPhoneResend" android:layout_weight="1"
                android:background="@android:color/transparent" android:layout_margin="5dp"
                android:textColor="@color/Tale"/>
        <Button
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/verifyPhoneConfirm" android:layout_weight="1"
                android:background="@android:color/transparent" android:layout_margin="5dp"/>
    </LinearLayout>
</LinearLayout>