<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <ImageView
            android:src="@drawable/mirelex_logo_cian"
            android:layout_width="match_parent"
            android:layout_height="100dp" android:id="@+id/imageView4" android:layout_weight="0"
            android:scaleType="fitCenter"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_weight="0"
            android:textAlignment="center" android:text="@string/forgotYourPassword" android:textStyle="bold"
            android:textSize="18sp" android:layout_marginBottom="10dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailFieldWarp" android:layout_weight="0" android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" android:hint="@string/emailField"
            android:backgroundTint="@android:color/darker_gray" android:textCursorDrawable="@android:color/black"
            android:textSize="16sp"/>
    <TextView
            android:text="@string/forgotYourPasswordDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView3" android:layout_weight="0"
            android:textAlignment="center" android:layout_marginLeft="50dp" android:layout_marginRight="50dp"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="0" android:id="@+id/alertBtnGroup">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp" android:id="@+id/btnCancel" android:layout_weight="1"
                android:text="@string/cancel" android:textColor="@android:color/holo_red_dark"
                android:background="@drawable/border" android:textSize="10sp"/>
        <Button
                android:text="@string/accept"
                android:layout_width="wrap_content"
                android:layout_height="40dp" android:id="@+id/btnSubmit" android:layout_weight="1"
                android:textColor="@android:color/black" android:background="@drawable/border"
                android:textSize="10sp"/>
    </TableRow>
</LinearLayout>