<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" android:orientation="vertical">

    <ImageView
            android:src="@drawable/mirelex_logo_cian"
            android:layout_width="match_parent"
            android:layout_height="100dp" android:id="@+id/imageView7" android:layout_weight="1"
            android:scaleType="fitCenter"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/leasableAlertTitle" android:layout_weight="1"
            android:textAlignment="center" android:textStyle="bold"
            android:textSize="18sp" android:layout_marginBottom="10dp" android:text="@string/alert"/>
    <TextView
            android:text="@string/wantToTestItBefore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/leasableAlertDesc" android:layout_weight="1"
            android:textAlignment="center" android:layout_marginLeft="50dp" android:layout_marginRight="50dp"
            android:layout_marginTop="10dp" android:layout_marginBottom="10dp"/>
    <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_weight="1" android:id="@+id/alertBtnGroup">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp" android:id="@+id/btnCancel" android:layout_weight="1"
                android:text="@string/no" android:textColor="@android:color/black"
                android:background="@drawable/border" android:textSize="10sp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp" android:id="@+id/btnSubmit" android:layout_weight="1"
                android:textColor="@android:color/black" android:background="@drawable/border"
                android:textSize="10sp" android:text="@string/yes"/>
    </TableRow>
</LinearLayout>