<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:orientation="vertical" android:paddingTop="20dp"
              android:paddingBottom="20sp">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/textView25" android:layout_weight="0"
            android:text="@string/enterClientMesaurements" android:textColor="@color/black" android:textStyle="bold"
            android:textAlignment="center" android:layout_marginBottom="20dp"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:theme="@style/textInputLayoutBlack"
            android:id="@+id/fittingCustomSizesHeight" android:layout_weight="0" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp" android:hint="@string/heightInCms">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" android:inputType="numberDecimal"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            android:id="@+id/fittingCustomSizesBustLayout">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/textInputLayoutBlack"
                android:id="@+id/fittingCustomSizesBust" android:layout_weight="1" android:hint="@string/bust">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="?"
                android:layout_width="20dp"
                android:layout_height="20dp" android:id="@+id/imagePreviewBust" android:layout_weight="0"
                android:textColor="@color/cyan" android:background="@color/colorGrey"
                android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            android:id="@+id/fittingCustomSizesWaistLayout">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/textInputLayoutBlack"
                android:id="@+id/fittingCustomSizesWaist" android:layout_weight="1" android:hint="@string/waist">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="?"
                android:layout_width="20dp"
                android:layout_height="20dp" android:id="@+id/imagePreviewWaist" android:layout_weight="0"
                android:textColor="@color/cyan" android:background="@color/colorGrey"
                android:layout_marginTop="15dp"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
            android:id="@+id/fittingCustomSizesHipLayout">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:theme="@style/textInputLayoutBlack"
                android:id="@+id/fittingCustomSizesHip" android:layout_weight="1" android:hint="@string/hip">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="?"
                android:layout_width="20dp"
                android:layout_height="20dp" android:id="@+id/imagePreviewHip" android:layout_weight="0"
                android:textColor="@color/cyan" android:background="@color/colorGrey"
                android:layout_marginTop="15dp"/>
    </LinearLayout>
    <Button
            android:text="@string/continueProcess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/fittingCustomSizesBtn" android:layout_weight="0"
            android:background="@color/cyan"/>
</LinearLayout>