<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ServiceCreateActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="1.0"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
        <TextView
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="12sp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/serviceCreateDatee"
                android:backgroundTint="@android:color/black" style="@style/Widget.AppCompat.Spinner.Underlined"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" android:id="@+id/linearLayout3">
        <TextView
                android:text="@string/stores"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:textColor="@android:color/black" android:textSize="12sp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/serviceCreateStores"
                style="@style/Widget.AppCompat.Spinner.Underlined" android:backgroundTint="@android:color/black"/>
    </LinearLayout>
    <android.support.design.widget.TabLayout
            android:layout_width="395dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"
            app:tabIndicatorColor="@color/colorBlue" android:id="@+id/createServiceType">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cleanning"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sewing"/>

    </android.support.design.widget.TabLayout>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/createServiceType"
            android:layout_marginTop="16dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/createServiceTitle1"
                android:textColor="@android:color/black" android:textSize="12sp"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/serviceCreateTypes"
                style="@style/Widget.AppCompat.Spinner.Underlined" android:backgroundTint="@android:color/black"
                android:spinnerMode="dialog"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>