<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PaymentCardCreateActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginStart="16dp" android:layout_marginEnd="16dp">
        <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp" app:srcCompat="@drawable/close" android:id="@+id/paymentCardCreateClose"
                android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_gravity="right"/>

        <ImageView
                android:id="@+id/imageView23"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/credit_card" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:theme="@style/textInputLayoutBlack"
                android:hint="@string/firstNameField" android:layout_marginBottom="16dp"
                android:id="@+id/paymentCardCreateName">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:theme="@style/textInputLayoutBlack"
                android:hint="@string/cardNumber" android:layout_marginBottom="16dp"
                android:id="@+id/paymentCardCreateNumber">

            <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number" android:maxLength="16"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_marginBottom="16dp">
            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:theme="@style/textInputLayoutBlack"
                    android:layout_weight="1" android:hint="CVC" android:id="@+id/paymentCardCreateCVC"
                    android:gravity="bottom">

                <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" android:maxLength="4"/>
            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:text="@string/month"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView24"
                        android:textColor="@color/black" android:textSize="12sp"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/paymentCardCreateMonth"
                        style="@android:style/Widget.Material.Light.Spinner.Underlined"
                        android:backgroundTint="@color/black" android:spinnerMode="dialog"/>
            </LinearLayout>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" android:layout_weight="1">
                <TextView
                        android:text="@string/year"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" android:textSize="12sp"/>
                <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/paymentCardCreateYear"
                        style="@android:style/Widget.Material.Light.Spinner.Underlined"
                        android:backgroundTint="@color/black" android:spinnerMode="dialog"/>
            </LinearLayout>
        </LinearLayout>
        <Button
                android:text="@string/continueProcess"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/paymentCardCreateBtn" android:background="@color/cyan"/>
    </LinearLayout>
</ScrollView>